--- a/apps/next/package.json
+++ b/apps/next/package.json
@@ -6,82 +6,83 @@
   "scripts": {
     "dev": "pnpm with-env next dev",
     "build": "pnpm with-env next build",
+    "build:a": "pnpm with-env next build",
     "start": "pnpm with-env next start",
     "lint": "next lint",
     "test": "pnpm with-env playwright test --headed",
     "with-env": "dotenv -e ../../.env --"
   },
   "dependencies": {
+    "@floating-ui/react": "^0.26.22",
+    "@heroicons/react": "^2.1.5",
+    "@node-rs/argon2": "^1.8.3",
+    "@node-rs/bcrypt": "^1.10.4",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@tailwindcss/container-queries": "^0.1.1",
+    "@tanstack/react-query": "^5.51.24",
+    "@trpc/client": "11.0.0-rc.403",
+    "@trpc/react-query": "11.0.0-rc.403",
+    "@trpc/server": "11.0.0-rc.403",
     "@tyl/api": "workspace:*",
     "@tyl/auth": "workspace:*",
     "@tyl/db": "workspace:*",
     "@tyl/ui": "workspace:*",
     "@tyl/validators": "workspace:*",
-    "@trpc/client": "11.0.0-rc.403",
-    "@trpc/react-query": "11.0.0-rc.403",
-    "@trpc/server": "11.0.0-rc.403",
-    "@floating-ui/react": "^0.26.16",
-    "@radix-ui/react-icons": "^1.3.0",
-    "@heroicons/react": "^2.1.3",
-    "@node-rs/argon2": "^1.8.3",
-    "@node-rs/bcrypt": "^1.10.4",
-    "@tailwindcss/container-queries": "^0.1.1",
-    "@tanstack/react-query": "^5.44.0",
     "@visx/visx": "^3.11.0",
     "@yornaath/batshit": "^0.10.1",
-    "lucia": "^3.2.0",
-    "arctic": "^1.9.1",
-    "chroma-js": "^2.4.2",
+    "arctic": "^1.9.2",
+    "chroma-js": "^3.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "date-fns-tz": "^3.1.3",
-    "drizzle-orm": "^0.31.2",
+    "drizzle-orm": "^0.33.0",
     "emoji-regex": "^10.3.0",
-    "framer-motion": "^11.2.10",
-    "lodash": "^4.17.21",
-    "next": "^14.2.4",
+    "framer-motion": "^11.3.28",
+    "lodash-es": "^4.17.21",
+    "lucia": "^3.2.0",
+    "next": "^14.2.5",
     "next-themes": "^0.3.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-error-boundary": "^4.0.13",
-    "tailwind-merge": "^2.3.0",
+    "superjson": "2.2.1",
+    "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "timezones-list": "^3.0.3",
     "usehooks-ts": "^3.1.0",
-    "superjson": "2.2.1",
     "uuid": "^10.0.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@types/chroma-js": "^2.4.4",
+    "@next/bundle-analyzer": "^14.2.5",
+    "@playwright/test": "^1.46.1",
+    "@tanstack/react-query-devtools": "^5.51.24",
     "@tyl/eslint-config": "workspace:*",
     "@tyl/prettier-config": "workspace:*",
     "@tyl/tailwind-config": "workspace:*",
     "@tyl/tsconfig": "workspace:*",
-    "@next/bundle-analyzer": "^14.2.3",
-    "@playwright/test": "^1.44.1",
-    "@tanstack/react-query-devtools": "^5.44.0",
+    "@types/chroma-js": "^2.4.4",
     "@types/jest": "^29.5.12",
-    "@types/lodash": "^4.17.5",
+    "@types/lodash-es": "^4.17.12",
     "@types/node": "^20.14.2",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/supertest": "^6.0.2",
-    "@types/uuid": "^9.0.8",
+    "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^7.13.0",
     "@typescript-eslint/parser": "^7.13.0",
-    "autoprefixer": "^10.4.19",
+    "autoprefixer": "^10.4.20",
     "dotenv": "^16.4.5",
     "dotenv-cli": "^7.4.2",
     "jest": "^29.7.0",
-    "jiti": "^1.21.0",
-    "postcss": "^8.4.38",
-    "postcss-preset-env": "^9.5.14",
-    "prettier": "^3.3.2",
-    "tailwindcss": "^3.4.4",
-    "ts-jest": "^29.1.4",
-    "typescript": "^5.4.5"
+    "jiti": "^1.21.6",
+    "postcss": "^8.4.41",
+    "postcss-preset-env": "^10.0.2",
+    "prettier": "^3.3.3",
+    "tailwindcss": "^3.4.10",
+    "ts-jest": "^29.2.4",
+    "typescript": "^5.5.4"
   },
   "prettier": "@tyl/prettier-config"
 }
