--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -12,7 +12,8 @@
     "ios": "expo run:ios",
     "format": "prettier --check . --ignore-path ../../.gitignore",
     "lint": "eslint",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "db:generate": "npx drizzle-kit generate"
   },
   "dependencies": {
     "@bacons/text-decoder": "^0.0.0",
@@ -22,7 +23,9 @@
     "@trpc/client": "catalog:",
     "@trpc/react-query": "catalog:",
     "@trpc/server": "catalog:",
+    "babel-plugin-inline-import": "^3.0.0",
     "class-variance-authority": "^0.7.0",
+    "drizzle-orm": "^0.33.0",
     "expo": "~51.0.27",
     "expo-constants": "~16.0.2",
     "expo-dev-client": "~4.0.23",
@@ -30,6 +33,7 @@
     "expo-router": "~3.5.21",
     "expo-secure-store": "^13.0.2",
     "expo-splash-screen": "~0.27.5",
+    "expo-sqlite": "^14.0.6",
     "expo-status-bar": "~1.12.1",
     "expo-web-browser": "^13.0.3",
     "nativewind": "~4.0.36",
