--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "clean:workspaces": "turbo run clean",
     "db:push": "turbo -F @tyl/db push",
     "db:studio": "turbo -F @tyl/db studio",
+    "db:gen": "turbo -F @tyl/db gen",
     "dev": "turbo watch dev",
     "dev:next": "turbo watch dev -F @tyl/nextjs...",
     "format": "turbo run format --continue -- --cache --cache-location node_modules/.cache/.prettiercache",
