--- a/apps/next/package.json
+++ b/apps/next/package.json
@@ -27,11 +27,11 @@
     "@tyl/auth": "workspace:*",
     "@tyl/db": "workspace:*",
     "@tyl/ui": "workspace:*",
+    "@tyl/helpers": "workspace:*",
     "@tyl/validators": "workspace:*",
     "@visx/visx": "^3.11.0",
     "@yornaath/batshit": "^0.10.1",
     "arctic": "^1.9.2",
-    "chroma-js": "^3.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
@@ -39,7 +39,6 @@
     "drizzle-orm": "^0.33.0",
     "emoji-regex": "^10.3.0",
     "framer-motion": "^11.3.28",
-    "lodash-es": "^4.17.21",
     "lucia": "^3.2.0",
     "next": "^14.2.5",
     "next-themes": "^0.3.0",
@@ -62,9 +61,7 @@
     "@tyl/prettier-config": "workspace:*",
     "@tyl/tailwind-config": "workspace:*",
     "@tyl/tsconfig": "workspace:*",
-    "@types/chroma-js": "^2.4.4",
     "@types/jest": "^29.5.12",
-    "@types/lodash-es": "^4.17.12",
     "@types/node": "^20.14.2",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
