--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -23,6 +23,9 @@
     "@trpc/client": "catalog:",
     "@trpc/react-query": "catalog:",
     "@trpc/server": "catalog:",
+    "@tyl/api": "workspace:*",
+    "@tyl/helpers": "workspace:*",
+    "@tyl/validators": "workspace:*",
     "babel-plugin-inline-import": "^3.0.0",
     "class-variance-authority": "^0.7.0",
     "drizzle-orm": "^0.33.0",
@@ -45,6 +48,7 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "~4.10.8",
     "react-native-screens": "~3.31.1",
+    "expo-drizzle-studio-plugin": "^0.0.2",
     "superjson": "2.2.1",
     "zod": "catalog:"
   },
@@ -52,7 +56,6 @@
     "@babel/core": "^7.25.2",
     "@babel/preset-env": "^7.25.3",
     "@babel/runtime": "^7.25.0",
-    "@tyl/api": "workspace:*",
     "@tyl/eslint-config": "workspace:*",
     "@tyl/prettier-config": "workspace:*",
     "@tyl/tsconfig": "workspace:*",
