--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -22,6 +22,7 @@
     "@tyl/auth": "workspace:*",
     "@tyl/db": "workspace:*",
     "@tyl/validators": "workspace:*",
+    "@tyl/helpers": "workspace:*",
     "@trpc/server": "11.0.0-rc.403",
     "superjson": "2.2.1",
     "date-fns": "^3.6.0",
