--- a/packages/helpers/package.json
+++ b/packages/helpers/package.json
@@ -5,10 +5,10 @@
   "type": "module",
   "exports": {
     ".": "./src/index.ts",
-    "./*": [
-      "./src/*.tsx",
-      "./src/*.ts"
-    ]
+    "./animation": "./src/animation.ts",
+    "./colorPresets": "./src/colorPresets.ts",
+    "./colorTools": "./src/colorTools.ts",
+    "./timezone": "./src/timezone.ts"
   },
   "license": "MIT",
   "scripts": {
