--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@bacons/text-decoder": "^0.0.0",
     "@expo/metro-config": "^0.18.11",
+    "@gorhom/bottom-sheet": "^4.6.4",
     "@shopify/flash-list": "1.6.4",
     "@tanstack/react-query": "catalog:",
     "@trpc/client": "catalog:",
