--- a/apps/next/tsconfig.json
+++ b/apps/next/tsconfig.json
@@ -1,14 +1,13 @@
 {
   "extends": "@tyl/tsconfig/base.json",
   "compilerOptions": {
-    "lib": ["es2022", "dom", "dom.iterable"],
+    "lib": ["ES2022", "dom", "dom.iterable"],
     "jsx": "preserve",
     "baseUrl": ".",
     "paths": {
       "~/*": ["./src/*"]
     },
     "plugins": [{ "name": "next" }],
-    "tsBuildInfoFile": "node_modules/.cache/tsbuildinfo.json",
     "module": "esnext"
   },
   "include": [".", ".next/types/**/*.ts"],
