--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -18,7 +18,9 @@
   "dependencies": {
     "@bacons/text-decoder": "^0.0.0",
     "@expo/metro-config": "^0.18.11",
+    "@floating-ui/react-native": "^0.10.6",
     "@gorhom/bottom-sheet": "^4.6.4",
+    "@gorhom/portal": "^1.0.14",
     "@shopify/flash-list": "1.7.1",
     "@tanstack/react-query": "catalog:",
     "@trpc/client": "catalog:",
