--- a/apps/expo/package.json
+++ b/apps/expo/package.json
@@ -46,6 +46,8 @@
     "expo-sqlite": "^14.0.6",
     "expo-status-bar": "~1.12.1",
     "expo-web-browser": "^13.0.3",
+    "jotai": "^2.9.3",
+    "proxy-compare": "^3.0.0",
     "radix-ui-react-native-icons": "^1.1.0",
     "react": "catalog:react18",
     "react-dom": "catalog:react18",
@@ -56,8 +58,10 @@
     "react-native-safe-area-context": "~4.10.8",
     "react-native-screens": "~3.31.1",
     "react-native-svg": "15.2.0",
+    "recoil": "^0.7.7",
     "superjson": "2.2.1",
     "twrnc": "^4.5.1",
+    "valtio": "^1.13.2",
     "zod": "catalog:"
   },
   "devDependencies": {
