--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -18,7 +18,9 @@
   },
   "license": "MIT",
   "scripts": {
+    "build": "tsc",
     "clean": "rm -rf .turbo node_modules",
+    "dev": "tsc --watch",
     "format": "prettier --check . --ignore-path ../../.gitignore",
     "lint": "eslint",
     "typecheck": "tsc --noEmit --emitDeclarationOnly false",
