--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tanstack-router-example-react-start-basic-auth",
+  "name": "@tyl/web",
   "private": true,
   "sideEffects": false,
   "type": "module",
@@ -18,9 +18,9 @@
     "@tanstack/router-plugin": "^1.57.15",
     "@tanstack/start": "^1.57.17",
     "@vitejs/plugin-react": "^4.3.1",
-    "prisma": "^5.19.1",
     "vinxi": "0.4.3",
     "@floating-ui/react": "^0.26.22",
+    "@tanstack/react-router-with-query": "^1.57.18",
     "@heroicons/react": "^2.1.5",
     "@node-rs/argon2": "^1.8.3",
     "@node-rs/bcrypt": "^1.10.4",
