--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -4,13 +4,10 @@
   "sideEffects": false,
   "type": "module",
   "scripts": {
-    "dev": "vinxi dev --port 3001",
-    "build": "vinxi build",
-    "start": "vinxi start",
-    "lint": "prettier --check '**/*' --ignore-unknown && eslint --ext .ts,.tsx ./app",
-    "format": "prettier --write '**/*' --ignore-unknown",
-    "prisma-generate": "prisma generate",
-    "test:e2e": "pnpm run prisma-generate && playwright test --project=chromium"
+    "dev": "pnpm with-env vinxi dev --port 3001",
+    "build": "pnpm with-env vinxi build",
+    "start": "pnpm with-env vinxi start",
+    "with-env": "dotenv -e ../../.env --"
   },
   "dependencies": {
     "@tanstack/react-router": "^1.57.17",
