--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -26,12 +26,15 @@
     "@radix-ui/react-switch": "^1.1.1",
     "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.4",
+    "@tanstack/react-form": "^0.39.0",
     "@tanstack/react-query": "catalog:",
     "@tanstack/react-router": "^1.85.0",
     "@tanstack/react-router-with-query": "^1.85.0",
+    "@tanstack/react-store": "^0.6.1",
     "@tanstack/router-devtools": "^1.85.0",
     "@tanstack/router-plugin": "^1.84.4",
     "@tanstack/start": "^1.85.0",
+    "@tanstack/zod-form-adapter": "^0.39.0",
     "@trpc/client": "catalog:",
     "@trpc/server": "catalog:",
     "@tyl/api": "workspace:*",
