--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "lint:ws": "pnpm dlx sherif@latest",
     "postinstall": "pnpm lint:ws",
     "test": "turbo run test",
-    "typecheck": "turbo run typecheck",
-    "ui-add": "turbo run ui-add"
+    "typecheck": "turbo run typecheck"
   },
   "devDependencies": {
     "@turbo/gen": "^2.3.1",
